--- a/index.html
+++ b/index.html
@@ -16,43 +16,30 @@
     }
     h2 {
       color: #2c3e50;
-      border-bottom: 2px solid #3498db;
-      padding-bottom: 10px;
       margin-bottom: 30px;
     }
     ul {
       list-style: none;
       padding-left: 0;
+      margin-left: 40px;           /* ← décalage vers la droite */
     }
     li {
-      margin: 12px 0;
-      padding-left: 28px;
-      position: relative;
-      transition: color 0.2s;
-    }
-    li::before {
-      content: "→";
-      position: absolute;
-      left: 0;
-      color: #3498db;
-      font-weight: bold;
-      font-size: 1.1em;
-    }
-    li:hover {
-      color: #2980b9;
+      margin: 16px 0;
+      font-weight: bold;           /* ← en gras */
+      color: #0066cc;              /* ← bleu franc */
     }
     a {
       color: inherit;
       text-decoration: none;
-      display: block;
     }
     a:hover {
       text-decoration: underline;
     }
+    /* mode sombre automatique si tu veux le garder */
     @media (prefers-color-scheme: dark) {
       body { background: #121212; color: #e0e0e0; }
-      h2 { color: #bbdefb; border-color: #3498db; }
-      li:hover { color: #90caf9; }
+      h2 { color: #bbdefb; }
+      li { color: #539bf5; }
     }
   </style>
 </head>
