--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <style>
     body {
       font-family: system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+      font-size: 1.1em;          /* ← taille augmentée globalement */
       max-width: 800px;
       margin: 40px auto;
       padding: 20px;
@@ -15,6 +16,7 @@
       background: #fafafa;
     }
     h2 {
+      font-size: 2.2em;           /* ← ajusté pour cohérence */
       color: #2c3e50;
       margin-bottom: 30px;
     }
